# Tuberculosis

./: readme.md
lungcare_ai_ml/: .gitignore  README.md  config.yaml  conftest.py  pyproject.toml  requirements.txt
lungcare_ai_ml/api/: app.py
lungcare_ai_ml/configs/: augmentation_config.yaml  base_config.yaml  classification_config.yaml  inference_config.yaml  segmentation_config.yaml
lungcare_ai_ml/datasets/: __init__.py  base_dataset.py  classification_dataset.py  dicom_dataset.py  segmentation_dataset.py  transforms.py
lungcare_ai_ml/docs/: dataset_preparation.md  inference_guide.md  installation.md  training_guide.md
lungcare_ai_ml/evaluation/: __init__.py  evaluator.py  report_generator.py
lungcare_ai_ml/inference/: __init__.py  pipeline.py  postprocessing.py
lungcare_ai_ml/models/: __init__.py  densenet.py  efficientnet.py  gradcam.py  resnet.py  unet.py  vit.py
lungcare_ai_ml/models/classification/: __init__.py  base_classifier.py  densenet.py  efficientnet.py  resnet.py  vit.py
lungcare_ai_ml/models/explainability/: __init__.py  attention_map.py  cam.py  gradcam.py
lungcare_ai_ml/models/segmentation/: __init__.py  attention_unet.py  unet.py  unet_plus_plus.py
lungcare_ai_ml/scripts/: download_datasets.py  evaluate.py  predict.py  prepare_data.py  train.py  train_segmentation.py
lungcare_ai_ml/services/: __init__.py  healthy_reference.py
lungcare_ai_ml/tests/: __init__.py  test_datasets.py  test_inference.py  test_integration.py  test_losses.py  test_metrics.py  test_models.py  test_transforms.py
lungcare_ai_ml/training/: __init__.py  classification_trainer.py  losses.py  metrics.py  schedulers.py  segmentation_trainer.py  trainer.py
lungcare_ai_ml/utils/: __init__.py  checkpoint.py  config.py  dicom_utils.py  logger.py  seed.py  torch_compat.py  visualization.py
